diesel_compile_tests/tests/ui/sql_type_bad_options.stderr
error: Missing required options
 --> $DIR/sql_type_bad_options.rs:4:10
  |
4 | #[derive(SqlType)]
  |          ^^^^^^^
  |
  = help: Valid options are `type_name` or `oid` and `array_oid`

warning: Option oid has no effect
 --> $DIR/sql_type_bad_options.rs:8:10
  |
8 | #[derive(SqlType)]
  |          ^^^^^^^

warning: Option array_oid has no effect
 --> $DIR/sql_type_bad_options.rs:8:10
  |
8 | #[derive(SqlType)]
  |          ^^^^^^^

error: Missing required option array_oid
  --> $DIR/sql_type_bad_options.rs:12:10
   |
12 | #[derive(SqlType)]
   |          ^^^^^^^

error: Expected a number
  --> $DIR/sql_type_bad_options.rs:16:10
   |
16 | #[derive(SqlType)]
   |          ^^^^^^^

warning: Option ary_oid has no effect
  --> $DIR/sql_type_bad_options.rs:20:10
   |
20 | #[derive(SqlType)]
   |          ^^^^^^^

error: Missing required option array_oid
  --> $DIR/sql_type_bad_options.rs:20:10
   |
20 | #[derive(SqlType)]
   |          ^^^^^^^

error: Expected a number
  --> $DIR/sql_type_bad_options.rs:20:10
   |
20 | #[derive(SqlType)]
   |          ^^^^^^^

error: aborting due to 5 previous errors

